2002-08-29  Ken Raeburn  <raeburn@mit.edu>

	* Makefile.in: Revert $(S)=>/ change, for Windows support.

2002-08-23  Ken Raeburn  <raeburn@mit.edu>

	* Makefile.in: Change $(S)=>/ and $(U)=>.. globally.

2002-08-08  Jen Selby  <jenselby@mit.edu>

	* telnetd.c: Switched the valid and user descriptions under the -a
	flag

2002-03-26  Ken Raeburn  <raeburn@mit.edu>

	* telnetd.c: Include fake-addrinfo.h, not fake-addrinfo.c.
	(FAI_PREFIX): Delete.

2001-10-09  Ken Raeburn  <raeburn@mit.edu>

	* defs.h, state.c, sys_term.c, telnetd-ktd.c, telnetd.c: Make
	prototypes unconditional.

Sat Sep  8 08:24:51 2001  Ezra Peisach  <epeisach@mit.edu>

	* telnetd.c: Move include of fake-addrinfo.c to after stdlib.h so
 	that malloc prototype povided.

2001-08-30  Ken Raeburn  <raeburn@mit.edu>

	* configure.in: Check for ipv6 support.

	* ext.h: Always use prototype declarations.
	(P): Definitions deleted.

	* defs.h: Don't include socket-utils.h until after netinet/in.h.

2001-08-29  Ken Raeburn  <raeburn@mit.edu>

	* defs.h: Include socket-utils.h.
	* telnetd.c: Include fake-addrinfo.c.
	(FAI_PREFIX): Define.
	(doit): Now static, and takes sockaddr pointer rather than
	sockaddr_in pointer.  Use getnameinfo instead of gethostbyaddr to
	verify that host name was available.
	(main): Use sockaddr_storage for remote address buffer; clear
	before using.  Only do IP_TOS processing for IPv4.

	* termio-tn.c, termios-tn.c: Define dummy variables if STREAMSPTY
	isn't defined, to silence compiler complaints about empty files.

2001-08-02  Tom Yu  <tlyu@mit.edu>

	* authenc.c (net_write): Rewrite in terms of netwrite().

	* configure.in: Check for vsnprintf().

	* ext.h: New prototypes for netprintf, netprintf_urg,
	netprintf_noflush, netwrite, netputs.

	* slc.c: Fix to use new NETOBUF-handling functions.

	* state.c: Fix to use new NETOBUF-handling functions.

	* telnetd.c: Fix to use new NETOBUF-handling functions.

	* termstat.c: Fix to use new NETOBUF-handling functions.
