@@ -1,3 +1,12 @@
+2002-11-15  Ezra Peisach  <epeisach@bu.edu>
+
+	* configure.in: Test for speed_t being present.
+
+	* sys_term.c (addarg): When reallocing memory, ensure in size of
+	pointer. Use speed_t instead of int for termspeeds.
+
+	* authenc.c, ext.h, state.c, utility.c: Unsigned/signed cleanup.
+
 2002-08-29  Ken Raeburn  <raeburn@mit.edu>
 
 	* Makefile.in: Revert $(S)=>/ change, for Windows support.
